2006-08-09  Jakub Steiner <jimmac@ximian.com>

	* scalable/status/weather*: awesome weather goodness by lapo
	  (minor tweaks)

2006-08-08  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.ac: Updated version to 2.15.91 for release

2006-08-08  Jakub Steiner <jimmac@ximian.com>

	* 32x32/categories/Makefile.am: fix typo. fixes #350369

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* evolution: re-add the evolution app icon temporarily, before
		#350253 get's sorted out

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* applications-accessories: scalables by Andreas Nilsson

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* {32x32,scalable}/categories/preferences-system*: based on another
		submission by Andreas Nilsson

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* 32x32,scalable/places/network-workgroup*: scalables based on
		icon by Andreas Nilsson

	* 48x48/places/network*: remove bitmaps

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* 32x32,scalable/window-new: missing sizes (by lapo)
	* 22x22/apps/utilities-terminal: new details (lapo)
	* utilities-system-monitor: can't really tell a
		difference, but lapo claims it's better :)
	* scalable/devices/computer, drive-optical, removable-media,
		keyboard, media-floppy: tweaks by lapo
	* {32x32,scalable}/audio-volume*: volume scalables by lapo

	* evolution: (r) App icons should not be in git. See bug #350253

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* start-here: an icon by Lapo Calamandrei

2006-08-04  Rodney Dawes  <dobey@novell.com>

	* 32x32/actions/document-new.svg:
	* 32x32/devices/media-flash.svg:
	* scalable/actions/document-new.svg:
	* scalable/actions/document-print.svg:
	Fix the namespace with a s/s odipodi/sodipodi/

2006-08-04  Jakub Steiner <jimmac@ximian.com>

	* media-flash: add a few details, clean up bitmaps.

2006-08-04  Jakub Steiner <jimmac@ximian.com>

	* multimedia-player: make more generic. Not an ipod anymore.
		Scalables by Andreas Nilsson.
