@@ -31,7 +31,15 @@ icons_DATA =				\
 	network-wireless-encrypted.png	\
 	user-trash-full.png		\
 	weather-clear.png		\
-	weather-clear-night.png
+	weather-clear-night.png	\
+	weather-few-clouds.png	\
+	weather-few-clouds-night.png	\
+	weather-overcast.png	\
+	weather-severe-alert.png	\
+	weather-showers.png	\
+	weather-showers-scattered.png	\
+	weather-snow.png	\
+	weather-storm.png
 
 EXTRA_DIST =				\
 	$(icons_DATA)
