@@ -1,5 +1,9 @@
 2006-08-09  Jakub Steiner <jimmac@ximian.com>
 
+	* {22x22,24x24}/status/weather: bitmaps (16x16 to do)
+
+2006-08-09  Jakub Steiner <jimmac@ximian.com>
+
 	* scalable/status/weather*: awesome weather goodness by lapo
 	  (minor tweaks)
 
